--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					सजी धजी घोड़ी, ना चले आप बिन,
 				मुबारक हो आप को 
 					शादी का ये दिन…* ।।  आयुष्मान् मुकेश कुमार एवं आयुष्मती गुड़िया कुमारी  के पावन परिणोत्सव 
-					की मधुर बेला में आपकी स्नेहमयी उपस्थिति एवं वर वधु के भावी जीवन को मंगलकामना हेतु आशीर्वचनो की कामना के साथ - इस ब्लू लाइन पर क्लिक करें - https://khabaitech.github.io/Priti-weds-Rishav/" 
+					की मधुर बेला में आपकी स्नेहमयी उपस्थिति एवं वर वधु के भावी जीवन को मंगलकामना हेतु आशीर्वचनो की कामना के साथ - इस ब्लू लाइन पर क्लिक करें - https://khabaitech.github.io/mukeshwedsgudiya/" 
 					data-action="share/whatsapp/share">
   <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s"><i class="icon-whatsapp" aria-hidden="true"></i></li> </a></ul>
 
